@@ -8,6 +8,9 @@ Version 1.4.21 - SVN
   - When sorting by received date, the received date is now shown on the
     message list.
   - Explicitly disable caching for left_main and right_main pages (#2983134).
+  - Fix error with SpamCop reporting plugin not being able to send report as
+    emails (#1795310).
+  - Fix typo in SpamCop plugin.
 
 Version 1.4.20 - 06 Mar 2010
 ---------------------------
